--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,7 +12,7 @@ builds:
   env:
     - CGO_ENABLED=0
     - GO111MODULE=on
-  ldflags: -s -w -X github.com/ebelanja/micro/cmd.GitCommit={{ .ShortCommit }} -X github.com/ebelanja/micro/cmd.GitTag={{ .Tag }} -X github.com/ebelanja/micro/cmd.BuildDate={{ .Timestamp }}
+  ldflags: -s -w -X github.com/ebelanja/hari/cmd.GitCommit={{ .ShortCommit }} -X github.com/ebelanja/hari/cmd.GitTag={{ .Tag }} -X github.com/ebelanja/hari/cmd.BuildDate={{ .Timestamp }}
   goos:
   - linux
 #  - darwin
