--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         bash scripts/test-docker.sh
 
-    - name: Test micro server
+    - name: Test hari server
       working-directory: ./test
       run: |
           # Generate keys for JWT tests
