--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
-    - name: Install micro
+    - name: Install hari
       run: |
         go install
 
