--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,10 +1,10 @@
-name: Run micro server integration tests
+name: Run hari server integration tests
 on: [push, pull_request]
 
 jobs:
 
   test:
-    name: Micro server integration tests
+    name: Hari server integration tests
     runs-on: ubuntu-latest
     steps:
 
