--- a/scripts/systemd/micro.service
+++ b/scripts/systemd/micro.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Micro
+Description=Hari
 After=network.target
 
 [Service]
 TimeoutStartSec=0
-ExecStart=/usr/local/bin/micro
+ExecStart=/usr/local/bin/hari
 Restart=on-failure
 RestartSec=5s
 
