--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,8 @@
-project_name: micro
+project_name: hari
 release:
   github:
-    owner: ebelanja
-    name: micro
+    owner: xinhari
+    name: hari
   name_template: 'Release {{.Tag}}'
 before:
   hooks:
@@ -12,7 +12,7 @@ builds:
   env:
     - CGO_ENABLED=0
     - GO111MODULE=on
-  ldflags: -s -w -X github.com/ebelanja/hari/cmd.GitCommit={{ .ShortCommit }} -X github.com/ebelanja/hari/cmd.GitTag={{ .Tag }} -X github.com/ebelanja/hari/cmd.BuildDate={{ .Timestamp }}
+  ldflags: -s -w -X xinhari.com/hari/cmd.GitCommit={{ .ShortCommit }} -X xinhari.com/hari/cmd.GitTag={{ .Tag }} -X xinhari.com/hari/cmd.BuildDate={{ .Timestamp }}
   goos:
   - linux
 #  - darwin
