--- a/.github.BACKUP/workflows/docker.yml
+++ b/.github.BACKUP/workflows/docker.yml
@@ -3,10 +3,10 @@ name: Docker
 on:
   push:
     branches:
-      - master
+      - main
     tags:
-      - v2.*
-      - v3.*
+      - v0.*
+      - v1.*
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: micro/micro
+        name: xinhari/xinhari
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         tag_names: true
