--- a/.github.BACKUP/workflows/integration-k8s.yml
+++ b/.github.BACKUP/workflows/integration-k8s.yml
@@ -2,7 +2,7 @@
 # The dream would be to ru the test suite after the tf apply
 # but it's fairly flaky still.
 
-name: Run micro server integration tests on k8s (kind)
+name: Run hari server integration tests on k8s (kind)
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
@@ -11,7 +11,7 @@ on:
 jobs:
 
   test:
-    name: Micro server integration tests
+    name: Hari server integration tests
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -22,7 +22,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: micro/micro
+        name: xinhari/xinhari
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
