--- a/.github.BACKUP/workflows/staging.yml
+++ b/.github.BACKUP/workflows/staging.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: micro/micro
+        name: xinhari/xinhari
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
