--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ builds:
   ldflags: -s -w -X xinhari.com/hari/cmd.GitCommit={{ .ShortCommit }} -X xinhari.com/hari/cmd.GitTag={{ .Tag }} -X xinhari.com/hari/cmd.BuildDate={{ .Timestamp }}
   goos:
   - linux
-#  - darwin
+  - darwin
   - windows
   goarch:
   - 386
@@ -29,7 +29,7 @@ builds:
 archives:
 - name_template: '{{.ProjectName}}-{{.Tag}}-{{.Os}}-{{.Arch}}{{if .Arm}}{{.Arm}}{{end}}'
   replacements:
-#    darwin: darwin
+    darwin: darwin
     linux: linux
     windows: windows
     amd64: amd64
