update workflow config

--- a/.github/workflows/integration-k8s.yml
+++ b/.github/workflows/integration-k8s.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: xinhari/xinhari
+        name: agus7fauzi/xinhari
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
