--- a/.github/workflows/integration-k8s.yml
+++ b/.github/workflows/integration-k8s.yml
@@ -4,6 +4,11 @@
 
 name: Run hari server integration tests on k8s (kind)
 on:
+  push:
+    branches: [main]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [main]
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '00 00 * * *'
