fix source code + image in teraform and kubernetes

--- a/platform/kubernetes/network/api.yaml
+++ b/platform/kubernetes/network/api.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     name: "go.micro.api"
     version: "latest"
-    source: "github.com/micro/micro"
+    source: "github.com/xinhari/hari"
     owner: "micro"
     group: "micro"
 spec:
@@ -73,7 +73,7 @@ spec:
               name: cloudflare-credentials
         args:
         - api
-        image: micro/micro
+        image: agus7fauzi/hari
         imagePullPolicy: Always
         ports:
         - containerPort: 443
