--- a/platform/kubernetes/network/auth-api.yaml
+++ b/platform/kubernetes/network/auth-api.yaml
@@ -25,7 +25,7 @@ metadata:
   annotations:
     name: "go.micro.api.auth"
     version: "latest"
-    source: "github.com/micro/micro"
+    source: "github.com/xinhari/hari"
     owner: "micro"
     group: "micro"
 spec:
@@ -58,7 +58,7 @@ spec:
         args:
         - auth
         - api
-        image: micro/micro
+        image: agus7fauzi/hari
         imagePullPolicy: Always
         ports:
         - containerPort: 8011
