--- a/platform/kubernetes/network/store.yaml
+++ b/platform/kubernetes/network/store.yaml
@@ -49,7 +49,7 @@ spec:
           value: "cockroach"
         - name: MICRO_STORE_ADDRESS
           value: "host=cockroachdb-public port=26257 sslmode=disable user=root"
-        image: micro/micro
+        image: agus7fauzi/hari
         imagePullPolicy: Always
         command:
         - /micro
