--- a/platform/kubernetes/network/broker.yaml
+++ b/platform/kubernetes/network/broker.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     name: "go.micro.broker"
     version: "latest"
-    source: "github.com/micro/micro"
+    source: "github.com/xinhari/hari"
     owner: "micro"
     group: "micro"
 spec:
@@ -51,7 +51,7 @@ spec:
           value: "etcd-cluster-client"
         args:
         - broker
-        image: micro/micro
+        image: xinhari/hari
         imagePullPolicy: Always
         ports:
         - containerPort: 8001
