--- a/platform/kubernetes/network/config.yaml
+++ b/platform/kubernetes/network/config.yaml
@@ -49,7 +49,7 @@ spec:
           value: "cockroach"
         - name: MICRO_STORE_ADDRESS
           value: "postgres://root@cockroachdb-public:26257/?sslmode=disable"
-        image: micro/micro
+        image: agus7fauzi/hari
         imagePullPolicy: Always
         command:
         - /micro
