--- a/platform/kubernetes/network/runtime.yaml
+++ b/platform/kubernetes/network/runtime.yaml
@@ -79,7 +79,7 @@ metadata:
   annotations:
     name: "go.micro.runtime"
     version: "latest"
-    source: "github.com/micro/micro"
+    source: "github.com/xinhari/hari"
     owner: "micro"
     group: "micro"
 spec:
@@ -133,5 +133,5 @@ spec:
           value: "postgres://root@cockroachdb-public:26257/?sslmode=disable"
         args:
         - runtime
-        image: micro/micro
+        image: agus7fauzi/hari
         imagePullPolicy: Always
